# pyfake

./: CHANGELOG.md  README.md  pyproject.toml
config/: adjectives.yml  company.yml  countries.yml  people.yml
pyfake/: __init__.py  adjective.py  book.py  company.py  country.py  generator.py  person.py  renderer.py  sport.py  tcp_ip.py
pyfake/config/: adjectives.yml  books.yml  sports.yml
tests/: test_adjective.py  test_book.py  test_company.py  test_countries.py  test_person.py  test_sports.py  test_tcp_ip.py
